# Brunata

./: .env.example  .gitignore  CLAUDE.md  README.md  brunata_debug_query.json  copilot-instructions-del2.md  copilot-instructions-del3.md  copilot-instructions.md  main.py  pyproject.toml
appdaemon/apps/brunata/: apps.yaml  brunata_app.py
custom_components/brunata/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  dashboard.py  debug_export.py  ledger.py  manifest.json  reconcile.py  sensor.py  services.py  services.yaml  statistics.py  websocket_api.py
custom_components/brunata/brunata_client/: aggregation.py  exceptions.py  history.py  models.py  parser.py
custom_components/brunata/www/: brunata-monthly-card.js
docs/: 16783917.json  8260593.json  8260600.json  api-reference.md  login-flow.md
scripts/: cleanup_appdaemon.ps1  deploy.py  ha_cleanup.py  history_smoke_test.py  install_brunata.py  live_smoke_test.py
src/brunata_client/: __init__.py  aggregation.py  client.py  exceptions.py  ledger.py  scheduling.py
tests/: test_aggregation.py  test_client.py  test_ledger.py  test_scheduling.py
