[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brunata-client"
version = "0.1.0"
description = "Uofficiel Python-klient til Brunata Online forbrugsdata"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/brunata_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
